Fixed accessibilitychecker wave color contrast error

--- a/css/index.css
+++ b/css/index.css
@@ -251,7 +251,7 @@ margin: auto;
     border-radius: 50%;
     cursor: pointer;
     border: 0;
-    background: radial-gradient(#078b49 50%, #28532f 85%);
+    background: radial-gradient(#165334 50%, #1b3820 85%);
     color:#ffffff;
     text-transform: uppercase;
     font-size: 1.8em;
